Facts section changed

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <!-- End Values Section -->
 
     <!-- ======= Counts Section ======= -->
-     <section id="counts" class="counts">
+   <!--  <section id="counts" class="counts">
       <div class="container">
 
         <div class="row gy-4">
@@ -314,7 +314,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Counts Section -->
 
     <!-- ======= Features Section ======= -->
