--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </section>
     <!-- End About Section -->
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+  <!--  <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -214,7 +214,7 @@
 
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Facts Section -->
 
 
