--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
               <a href="https://www.github.com/DoneJoseph/" target="_blank" title="Github" rel="noopener noreferrer" class="facebook"><i class="fa-brands fa-github"></i></a>
               <a href="https://www.instagram.com/kunjappan__007/" class="instagram" target="_blank" title="Instagram" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/done-joseph-b41553250" class="linkedin" target="_blank" title="Linkedin" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-               <a href="https://www.twitter.com/in/done-joseph-b41553250" class="linkedin" target="_blank" title="Twitter" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+               <a href="https://www.twitter.com/in/Kunjappan__007" class="linkedin" target="_blank" title="Twitter" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
            </div>
           </div>
         </div>
