Updated dropdown menu

--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ's</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>social-links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="https://github.com/DoneJoseph">Instagram</a></li>
+              <li class="dropdown"><a href="#"><span>source Code</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="https://instagram.com/kunjappan__007">Git Hub</a></li>
+                  <li><a href="https://gitlab.com/Hacker_k">Git Lab</a></li>
+                  <li><a href="https://codepen.io/Donejoseph">Codepen</a></li>
+                  <li><a href="https://www.behance.net/donejoseph">Behance</a></li>
+                  <li><a href="https://dribbble.com/kunjappan007">Dribble</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="https://t.me/kunjappan007">Telegram</a></li>
+              <li><a href="https://wa.me/+919526617697">Whatsapp</a></li>
+              <li><a href="https://www.buymeacoffee.com/kunjappan">BUY ME A COFFEE</a></li>
             </ul>
-          </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li>
-            <a class="getstarted scrollto" href="#about">Get Started</a>
           </li> 
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        <!--  <li>
+            <a class="getstarted scrollto" href="#about">Get Started</a>
+          </li> -->
         </ul>
          <!-- <i class="ri-moon-fill" id="icon"></i> -->
         <input type="checkbox" class="checkbox" id="checkbox">
