--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li><a class="nav-link scrollto active" href="#header">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+        <!--  <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a class="nav-link scrollto" href="#faq">FAQ's</a></li>
           <li class="dropdown"><a href="#"><span>social-links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
