--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <title>Kunjappan</title>
   <!-- Meta Description -->
-  <meta content="Whether your company needs a whole new site designed from start or a facelift for your present one, we'll craft the perfect design for your business website." name="description">
+  <meta content="Creative Designer & Front-end Developer I design and code beautifully simple things, and I love what I do.
+Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts." name="description">
   <!-- Meta Keyword -->
   <meta content="Kunjappan, Website Developer, Web App Developer, MERN APP Developer, HTML, CSS, JS, JAVASCRIPT, WEb Development, App Development, Developers, Programmers, Freelance, Website, Python, C++, C, JAVA, Kotlin, Android Studio" name="keywords">
   <!-- Meta Author-->
