--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta name="theme-color" content="#4154f1" />
   <!-- Meta twitter -->
   <meta property="twitter:title" content="Kunjappan">
-  <meta property="twitter:description" content="Hi! I’m Done Joseph, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
+  <meta property="twitter:description" content="Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
   <meta property="twitter:image" content="https://kunjappan.vercel.app/og_imgae.png">
   <meta property="twitter:image:type" content="image/png">
   <meta property="twitter:image:width" content="1200">
