Update index.html to Done Joseph
From kunjappan to done joseph

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kunjappan</title>
+  <title>Done Joseph</title>
   <!-- Meta Description -->
   <meta content="Creative Designer & Front-end Developer I design and code beautifully simple things, and I love what I do.Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts." name="description">
   <!-- Meta Keyword -->
-  <meta content="Kunjappan, Website Developer, Web App Developer, MERN APP Developer, HTML, CSS, JS, JAVASCRIPT, WEb Development, App Development, Developers, Programmers, Freelance, Website, Python, C++, C, JAVA, Kotlin, Android Studio" name="keywords">
+  <meta content="Kunjappan, Done Joseph, Website Developer, Web App Developer, MERN APP Developer, HTML, CSS, JS, JAVASCRIPT, WEb Development, App Development, Developers, Programmers, Freelance, Website, Python, C++, C, JAVA, Kotlin, Android Studio" name="keywords">
   <!-- Meta Author-->
-  <meta name="author" content="Kunjappan">
+  <meta name="author" content="Done Joseph">
   <!-- Meta OpenGraph -->
   <meta property="og:title" content="Kunjappan">
   <meta property="og:description" content="Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
@@ -71,7 +71,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="/" class="logo d-flex align-items-center">
         <img src="images/logo.svg" alt="logo">
-        <span>KUNJAPPAN</span>
+        <span>DON</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -895,7 +895,7 @@
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="home.html" class="logo d-flex align-items-center">
               <img src="images/logo.svg" alt="kunjappan">
-              <span>KUNJAPPAN</span>
+              <span>Done Joseph</span>
             </a>
             <p style="font-size: 15px;">
               I will get it done 🚀⚡
