--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
   <!-- Meta Author-->
   <meta name="author" content="Done Joseph">
   <!-- Meta OpenGraph -->
-  <meta property="og:title" content="Kunjappan">
-  <meta property="og:description" content="Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
+  <meta property="og:title" content="Done Joseph">
+  <meta property="og:description" content="Hi! I’m Done Joseph, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
   <meta property="og:image" content="og_imgae.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:url" content="https://kunjappan.vercel.app/">
+  <meta property="og:url" content="https://donejoseph.vercel.app/">
   <meta name="theme-color" content="#4154f1" />
   <!-- Meta twitter -->
-  <meta property="twitter:title" content="Kunjappan">
-  <meta property="twitter:description" content="Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
+  <meta property="twitter:title" content="Done Joseph">
+  <meta property="twitter:description" content="Hi! I’m Done Joseph, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.">
   <meta property="twitter:image" content="https://kunjappan.vercel.app/og_imgae.png">
   <meta property="twitter:image:type" content="image/png">
   <meta property="twitter:image:width" content="1200">
@@ -64,7 +64,7 @@
     <div class="img"><img src="images/loader.gif" alt="KUNJAPPAN"></div>
   </div>
   <div class="splash-dark">
-    <div class="img"><img src="images/loader-dark.gif" alt="KUNJAPPAN"></div>
+    <div class="img"><img src="images/loader-dark.gif" alt="Done_Joseph"></div>
   </div> 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top">
@@ -152,7 +152,7 @@
               <h3>Who I Am</h3>
               <h2>Creative Designer & Front-end Developer I design and code beautifully simple things, and I love what I do.</h2>
               <p>
-                Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.
+                Hi! I’m Done Joseph, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#values" class="btn-read-more d-inline-flex scrollto align-items-center justify-content-center align-self-center">
@@ -983,7 +983,7 @@
     <div class="container">
       <div class="copyright">
         &copy; <span id="year"></span> Copyright
-        <strong><span>Kunjappan</span></strong>. All Rights Reserved
+        <strong><span>Done Joseph</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
